@@ -1,3 +1,12 @@
+2011-02-22  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/bml.c:
+	  Code cleanup and some interesting discovery about performance. Yet,
+	  conditionally off.
+
+	* tests/testmachine.sh:
+	  Use proper signal name.
+
 2011-01-30  Stefan Kost  <ensonic@users.sf.net>
 
 	* dllwrapper/wine/win32.c:
